--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+html,
+body,
+#root {
+  /* margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased; */
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#outer {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+.parent-div {
+  /* width: 100%; */
+  /* height: 95%; */
+  display: flex;
+  flex-direction: row;
+  flex: 1 1 auto;
+
+  /* background-color: aqua; */
+}
+.lchild {
+  /* background-color: lightcoral; */
+  width: 45%;
+  /* margin: auto; */
+  flex: 1 1 auto;
+  /* box-sizing: border-box; */
+  /* flex: auto; */
+  /* height: 100%; */
+  /* float: left; */
+  /* margin-right: 5px; */
+}
+.mchild {
+  /* background-color: lightgoldenrodyellow; */
+  width: 35%;
+  /* margin: auto; */
+  flex: 1 1 auto;
+}
+.rchild {
+  background-color: lightcyan;
+  width: 20%;
+  /* margin: auto; */
+  flex: 1 1 auto;
+}
+
+#inner_fixed {
+  height: 5%;
+  flex: 0 1 auto;
+
+  background-color: grey;
+}
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  height: 28px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
 }
