--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,7 @@ body,
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 #outer {
@@ -31,20 +30,11 @@ code {
   /* background-color: aqua; */
 }
 .lchild {
-  /* background-color: lightcoral; */
   width: 45%;
-  /* margin: auto; */
   flex: 1 1 auto;
-  /* box-sizing: border-box; */
-  /* flex: auto; */
-  /* height: 100%; */
-  /* float: left; */
-  /* margin-right: 5px; */
 }
 .mchild {
-  /* background-color: lightgoldenrodyellow; */
   width: 35%;
-  /* margin: auto; */
   flex: 1 1 auto;
 }
 .rchild {
@@ -63,9 +53,9 @@ code {
 div.tooltip {
   position: absolute;
   text-align: center;
-  width: 60px;
-  height: 28px;
-  padding: 2px;
+  width: auto;
+  height: auto;
+  padding: 5px;
   font: 12px sans-serif;
   background: lightsteelblue;
   border: 0px;
