--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,26 @@
 html,
 body,
 #root {
-  /* margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased; */
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
 }
 
+header {
+  /* font-variant: small-caps; */
+  text-align: center;
+  /* font-family: "Helvetica", "Arial", sans-serif; */
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5em;
+  color: black;
+  border-bottom: 1pt solid grey;
+  display: flex;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
@@ -38,7 +48,7 @@ code {
   flex: 1 1 auto;
 }
 .rchild {
-  background-color: lightcyan;
+  /* background-color: lightcyan; */
   width: 20%;
   /* margin: auto; */
   flex: 1 1 auto;
@@ -47,8 +57,7 @@ code {
 #inner_fixed {
   height: 5%;
   flex: 0 1 auto;
-
-  background-color: grey;
+  background-color: #f7f7f7;
 }
 div.tooltip {
   position: absolute;
@@ -71,4 +80,108 @@ div.tooltip {
 .guides-selected,
 .guides-hovered {
   stroke: "red" !important;
+}
+
+.x.axis line {
+  stroke: #fff;
+}
+
+.x.axis .minor {
+  stroke-opacity: 0.5;
+}
+
+.x.axis path {
+  fill: gray;
+}
+
+.modal-header {
+  display: block;
+}
+
+.ModalHeaderBody {
+  display: flex;
+}
+
+.Modal.Body > .SortableList {
+  position: relative;
+  z-index: 0;
+  background-color: #f3f3f3;
+  border: 1px solid #efefef;
+  border-radius: 3px;
+  outline: none;
+
+  width: 400px;
+  height: 600px;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  border: 1px solid #e0e0e0;
+  list-style: none;
+  padding: 0;
+}
+.SortableItem {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  padding: 0 20px;
+  background-color: #fff;
+  border-bottom: 1px solid #efefef;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: #333;
+  font-weight: 500;
+}
+.SortableHelper {
+  position: relative;
+  top: 1px;
+  display: block;
+  width: 18px;
+  height: 11px;
+  opacity: 0.25;
+  margin-right: 20px;
+  cursor: row-resize;
+  background: -webkit-linear-gradient(
+    top,
+    #000,
+    #000 20%,
+    #fff 0,
+    #fff 40%,
+    #000 0,
+    #000 60%,
+    #fff 0,
+    #fff 80%,
+    #000 0,
+    #000
+  );
+  background: linear-gradient(
+    180deg,
+    #000,
+    #000 20%,
+    #fff 0,
+    #fff 40%,
+    #000 0,
+    #000 60%,
+    #fff 0,
+    #fff 80%,
+    #000 0,
+    #000
+  );
+
+  /* box-shadow: 0 5px 5px -5px rgba(0, 0, 0, 0.2), 0 -5px 5px -5px rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 255, 255, 0.8);
+  cursor: row-resize; */
+}
+
+.ModalLimited {
+  max-height: 500px;
+  overflow: auto;
 }
