--- a/src/index.css
+++ b/src/index.css
@@ -185,3 +185,20 @@ div.tooltip {
   max-height: 500px;
   overflow: auto;
 }
+
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.header-accordion {
+  cursor: pointer;
+}
+
+.header-accordion-disabled {
+  cursor: not-allowed;
+}
