--- a/src/print.css
+++ b/src/print.css
@@ -34,16 +34,16 @@ header {
   flex: 1 1 auto;
   display: flex;
   flex-direction: row;
-  width: 80%;
+  /* width: 80%; */
   page-break-inside: avoid;
 }
 .lchild {
-  width: 40%;
+  /* width: 40%; */
   flex: 1 1 auto;
   height: 100%;
 }
 .mchild {
-  width: 20%;
+  /* width: 20%; */
   flex: 1 1 auto;
 }
 .rchild {
