Includes independent component for labels Limits the dragging of the components so they do not dissaper completly. The width of the rectangles in the Heatmap adapt to the num of els.

--- a/src/index.css
+++ b/src/index.css
@@ -203,6 +203,11 @@ div.tooltip {
   overflow: auto;
 }
 
+.highlighted-guide {
+  stroke: red !important;
+  stroke-opacity: 0.75 !important;
+}
+
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
