--- a/src/index.css
+++ b/src/index.css
@@ -365,6 +365,9 @@ circle.MuiSlider-valueLabel {
   color: rgb(75, 73, 73);
   font-style: italic;
 }
+.MuiTableCell-sizeSmall {
+  padding: 6px 6px 6px 10px !important;
+}
 .select-custom-class-filter {
   width: 100%;
   margin-top: 5px;
