--- a/src/index.css
+++ b/src/index.css
@@ -131,8 +131,21 @@ div.tooltip {
 
 .modal-header {
   display: block;
+
+  border-bottom: 1px solid #e9ecef;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
 }
 
+.modal-title {
+  font-weight: 400;
+  font-size: 1.75rem;
+  padding-left: 1rem;
+
+  letter-spacing: 0.5px;
+  text-decoration: solid;
+  text-emphasis: initial;
+}
 .ModalHeaderBody {
   display: flex;
 }
