--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 html,
 body,
 #root {
-  overflow: hidden;
-  margin: 0;
+    margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -12,6 +11,9 @@ body,
 }
 ._loading_overlay_wrapper {
   height: 100%;
+}
+body{
+  overflow: auto !important;
 }
 header {
   text-align: center;
