--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body,
 ._loading_overlay_wrapper {
   height: 100%;
 }
+
 .overflow-allowed{
   overflow: auto !important;
 }
@@ -78,6 +79,35 @@ header {
   min-height: 100%;
   max-height: 100%;
 }
+
+.button-with-icon span { 
+  position:absolute;
+  opacity: 0;
+}
+
+/* .button-with-icon span:after {
+  width:0;
+
+  transition: 0.5s;
+} */
+
+.button-with-icon:hover span {
+  position: static;
+  opacity: 1;
+  transition: opacity 0.25s linear;
+  padding-right: 0.5em
+}
+
+/* .button-with-icon:hover span:after {
+  width:auto;
+  opacity: 1;
+} */
+
+/* .button-with-icon{
+  width:auto;
+  transition: all 0.5s;
+} */
+
 .mchild {
   /* width: 25%; */
   -webkit-box-flex: 1;
