--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ header {
   page-break-inside: avoid;
 }
 .lchild {
-  width: 35%;
+  max-width: 35%;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flexbox: 1;
@@ -96,7 +96,7 @@ header {
 
 
 .mchild {
-  /* width: 25%; */
+  width: auto;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flexbox: 1;
@@ -108,6 +108,17 @@ header {
   -ms-flexbox: 1;
 
   width: 20%;
+  flex: 1 1 auto;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+}
+.rchild-closed {
+  -webkit-box: 1 1 auto;
+  -webkit-flex: 1 1 auto;
+  -ms-flexbox: 1;
+  background-color: grey;
+  max-width: 3%;
   flex: 1 1 auto;
   margin: 0;
   padding: 0;
